<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:elevation="4dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="57dp"
                android:layout_height="55dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/ImageUserList"
                android:src="@drawable/ic_account_black" />
            <TextView
                android:id="@+id/tv_username_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/imageView2"
                android:text="@string/userName"
                android:textAlignment="textEnd"
                android:textAppearance="?android:textAppearanceLarge">
            </TextView>
            <ImageView
                android:id="@+id/iv_isonline_list"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignTop="@+id/imageView2"
                android:layout_alignEnd="@+id/imageView2"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:contentDescription="@string/isOnline"
                app:srcCompat="@drawable/ic_isofline" />
            <TextView
                android:id="@+id/tv_userlvl_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_username_list"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/imageView2"
                android:text="@string/userEmail"
                android:textAppearance="?android:textAppearanceMedium" />
            <ImageButton
                android:id="@+id/button_voicecall"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                android:src="@android:drawable/ic_menu_call" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>